<resources>
    <string name="app_name">NALAssetManagement</string>
    <string name="asset_list">Danh sách tài sản</string>
    <string name="asset_inventory">Kiểm kê tài sản</string>
    <string name="asset_list_fragment">Asset List fragment</string>
    <string name="inventory_fragment">Inventory fragment</string>
    <string name="asset_management">Quản lý tài sản</string>
    <string name="hint_search_asset">Nhập Ldap, tên sản phẩm …</string>
    <string name="add_photo">Thêm ảnh</string>
    <string name="asset_detail">Chi tiết tài sản</string>
    <string name="asset_depreciation_detail">Chi tiết khấu hao tài sản</string>
    <string name="asset_address_detail">Vị trí tài sản</string>
    <string name="code">Mã</string>
    <string name="qrcode">QrCode</string>
    <string name="status">Tình trạng</string>
    <string name="good">Tốt</string>
    <string name="product_description">Mô tả sản phẩm</string>
    <string name="producer">Nhà sản xuất</string>
    <string name="apple">Apple</string>
    <string name="model">Model</string>
    <string name="iphone11">Iphone 11</string>
    <string name="serial">Serial</string>
    <string name="history">Lịch sử</string>
    <string name="ngay_trong_kho">Ngày trong kho</string>
    <string name="mang_di_sua">Mang đi sửa</string>
    <string name="category">Danh mục</string>
    <string name="computer">Máy tính</string>
    <string name="cong_ty_truc_thuoc">Công ty trực thuộc</string>
    <string name="unit">Đơn vị</string>
    <string name="method">Phương pháp</string>
    <string name="duong_thang">Đường thẳng</string>
    <string name="depreciation_start_day">Ngày bắt đầu khấu hao</string>
    <string name="fee_depreciation">Chi phí khấu hao</string>
    <string name="depreciation_month">Khấu hao(tháng)</string>
    <string name="liquidation_pride">Giá trị thanh lý</string>
    <string name="depreciation_detail">Chi tiết khấu hao</string>
    <string name="remaining_value">Giá trị còn lại</string>
    <string name="this_year">Năm nay</string>
    <string name="old_year">Những năm trước</string>
    <string name="location">Vị trí</string>
    <string name="location_info">%1s Đã giao cho %2s tại %3s</string>
    <string name="filter_condition">Điều kiện lọc tài sản</string>
    <string name="msg_call_api_failure">Lấy thông tin không thành công!</string>
    <string name="close">Đóng</string>
    <string name="update">Cập nhật</string>
    <string name="no_qr_code">Chưa có mã qr code</string>

    <string name="label_liquidation">Xin thanh lý</string>
    <string name="label_type_least">Kém</string>
    <string name="label_type_nomal">Bình thường</string>
    <string name="label_type_good">Tốt</string>
    <string name="select_type">Chọn tình trạng</string>
    <string name="input_note">Nhập ghi chú</string>
    <string name="label_list_inventory">Các đợt kiểm kê hiện hành</string>
    <string name="label_list_inventory_end">Các đợt kiểm kê đã kết thúc</string>
    <string name="no_data">Không có dữ liệu!</string>
</resources>
