<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_box_detail">

    <TextView
        android:id="@+id/tvTitleMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_12dp"
        android:text="@string/method"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:text="@string/duong_thang"
        android:textColor="@color/base_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvTitleMethod"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvTitleMethod" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/mdMethod"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:background="@color/color_bg_base"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleMethod" />

    <TextView
        android:id="@+id/tvTitleStartDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_12dp"
        android:text="@string/depreciation_start_day"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mdMethod" />

    <TextView
        android:id="@+id/tvStartDay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_12dp"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:gravity="end"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="18/2/2019"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/tvTitleStartDay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvTitleStartDay"
        app:layout_constraintTop_toTopOf="@+id/tvTitleStartDay" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/mdProductDes"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:layout_marginHorizontal="@dimen/dimen_12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/color_bg_base"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleStartDay" />

    <TextView
        android:id="@+id/tvTitleFeeDepreciation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_12dp"
        android:text="@string/fee_depreciation"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mdProductDes" />

    <TextView
        android:id="@+id/tvFeeDepreciation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_12dp"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:gravity="end"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="200.000 vnđ"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/tvTitleFeeDepreciation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvTitleFeeDepreciation"
        app:layout_constraintTop_toTopOf="@+id/tvTitleFeeDepreciation" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/mdFeeDepreciation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:layout_marginHorizontal="@dimen/dimen_12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleFeeDepreciation"/>

    <TextView
        android:id="@+id/tvTitleDepreciation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_12dp"
        android:text="@string/depreciation_month"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mdFeeDepreciation" />

    <TextView
        android:id="@+id/tvDepreciation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_12dp"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:gravity="end"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="60"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/tvTitleDepreciation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvTitleDepreciation"
        app:layout_constraintTop_toTopOf="@+id/tvTitleDepreciation" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/mdLiquidationPride"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:layout_marginHorizontal="@dimen/dimen_12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleDepreciation"/>

    <TextView
        android:id="@+id/tvTitleLiquidationPride"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_12dp"
        android:text="@string/liquidation_pride"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mdLiquidationPride" />

    <TextView
        android:id="@+id/tvLiquidationPride"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_12dp"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:gravity="end"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="2.000.000 vnđ"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/tvTitleLiquidationPride"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvTitleLiquidationPride"
        app:layout_constraintTop_toTopOf="@+id/tvTitleLiquidationPride" />

</androidx.constraintlayout.widget.ConstraintLayout>
