<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_box_detail">

    <TextView
        android:id="@+id/tvTitleDetailDepreciation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_12dp"
        android:text="@string/depreciation_detail"
        android:textColor="@color/base_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/mdDetailDepreciation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:background="@color/color_bg_base"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleDetailDepreciation" />

    <TextView
        android:id="@+id/tvTitleRemainingValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_12dp"
        android:text="@string/remaining_value"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mdDetailDepreciation" />

    <TextView
        android:id="@+id/tvRemainingValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_12dp"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:gravity="end"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="17.600.000 vnđ"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/tvTitleRemainingValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvTitleRemainingValue"
        app:layout_constraintTop_toTopOf="@+id/tvTitleRemainingValue" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/mdProductDes"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:layout_marginHorizontal="@dimen/dimen_12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/color_bg_base"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleRemainingValue" />

    <TextView
        android:id="@+id/tvTitleThisYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_12dp"
        android:text="@string/this_year"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mdProductDes" />

    <TextView
        android:id="@+id/tvThisYear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_12dp"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:gravity="end"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="18.000.000 vnđ"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/tvTitleThisYear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvTitleThisYear"
        app:layout_constraintTop_toTopOf="@+id/tvTitleThisYear" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/mdThisYear"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:layout_marginHorizontal="@dimen/dimen_12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleThisYear"/>

    <TextView
        android:id="@+id/tvTitleOldYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_12dp"
        android:text="@string/old_year"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mdThisYear" />

    <TextView
        android:id="@+id/tvOldYear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_12dp"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:gravity="end"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="15.000.000 vnđ"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/tvTitleOldYear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvTitleOldYear"
        app:layout_constraintTop_toTopOf="@+id/tvTitleOldYear" />

</androidx.constraintlayout.widget.ConstraintLayout>
